src/test/ui/consts/const-prop-read-static-in-const.stderr
error: any use of this value will cause an error
  --> $DIR/const-prop-read-static-in-const.rs:5:18
   |
LL | const TEST: u8 = MY_STATIC;
   | -----------------^^^^^^^^^-
   |                  |
   |                  constant accesses static
   |
   = note: `#[deny(const_err)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #71800 <https://github.com/rust-lang/rust/issues/71800>

warning: skipping const checks
   |
help: skipping check that does not even have a feature gate
  --> $DIR/const-prop-read-static-in-const.rs:5:18
   |
LL | const TEST: u8 = MY_STATIC;
   |                  ^^^^^^^^^

error: aborting due to previous error; 1 warning emitted

